--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub File Viewer</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/vs2015.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
 
 </head>
@@ -24,6 +24,19 @@
         padding: 10px;
         background-color: #f8f8f8;
     }
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #1E1E1E;
+        color: #D4D4D4;
+    }
+
+    pre {
+        background-color: #1E1E1E;
+        padding: 10px;
+        border-radius: 5px;
+    }
+    </style>
+    
 </style>
 
 <body>
